# tidy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  test_sample.py  test_tidy.py
src/tidy/: __init__.py  main.py  transformers.py
tests/: __init__.py  test.py  test_copy.py
