[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidy"
version = "0.1.0"
description = "A CLI tool named tidy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

authors = [
  { name = "vincentdeneuf", email = "0189vn@gmail.com" },
]

dependencies = [
  "libcst",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Code Generators",
]

keywords = ["cli", "code", "formatting", "refactor", "ast"]

[project.urls]
Homepage = "https://github.com/vincentdeneuf/tidy"
Repository = "https://github.com/vincentdeneuf/tidy"
Issues = "https://github.com/vincentdeneuf/tidy/issues"

[project.scripts]
tidy = "tidy.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "build>=1.4.0",
  "ruff>=0.15.0",
  "twine>=6.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]